macos/Classes/trtc_c_api/trtc_cloud.h

// 10.4
trtc_c_api int trtc_cloud_send_custom_audio_data(trtc_cloud instance, trtc_audio_frame_t frame);
// 10.5
trtc_c_api int trtc_cloud_enable_mix_external_audio_frame(trtc_cloud instance,
                                                          bool enable_publish,
                                                          bool enable_playout);
// 10.9.1
trtc_c_api int trtc_cloud_enable_local_video_custom_process(trtc_cloud instance,
                                                            bool enable,
                                                            int pixel_format,
                                                            int buffer_type);
// 10.9.2
trtc_c_api int trtc_cloud_set_local_video_custom_process_callback(
    trtc_cloud instance,
    trtc_video_frame_callback callback);
// 10.10
trtc_c_api int trtc_cloud_set_local_video_render_callback(trtc_cloud instance,
                                                          int pixel_format,
                                                          int buffer_type,
                                                          trtc_video_frame_callback callback);
// 10.11
trtc_c_api int trtc_cloud_set_remote_video_render_callback(trtc_cloud instance,
                                                           const char* user_id,
                                                           int pixel_format,
                                                           int buffer_type,
                                                           trtc_video_render_callback callback);
// 10.12
trtc_c_api int trtc_cloud_set_audio_frame_callback(trtc_cloud instance,
                                                   trtc_audio_frame_callback callback);
// 11.1
trtc_c_api int trtc_cloud_send_sustom_cmd_msg(trtc_cloud instance,
                                              int cmd_id,
                                              const uint8_t* data,
                                              int data_size,
                                              bool reliable,
                                              bool ordered);
// 11.2
trtc_c_api int trtc_cloud_send_sei_msg(trtc_cloud instance,
                                       const uint8_t* data,
                                       int data_size,
                                       int repeat_count);
// 12.1
trtc_c_api int trtc_cloud_start_speed_test(trtc_cloud instance, trtc_speed_test_params_t params);
// 12.2
trtc_c_api int trtc_cloud_stop_speed_test(trtc_cloud instance);
// 13.1
trtc_c_api const char* trtc_cloud_get_sdk_version(trtc_cloud instance);
// 13.2 - 13.5
trtc_c_api int trtc_cloud_set_log_param(trtc_cloud instance, trtc_log_param_t param);
// 13.6
trtc_c_api int trtc_cloud_set_log_callback(trtc_cloud instance, trtc_log_callback callback);
// 13.7
trtc_c_api int trtc_cloud_show_debug_view(trtc_cloud instance, int show_type);
// 13.9
trtc_c_api const char* trtc_cloud_call_experimental_api(trtc_cloud instance, const char* json_str);
trtc_c_api void* trtc_cloud_copy_native_memery(void* dst, void* src, int size);
trtc_c_api void trtc_cloud_write_log(trtc_log_write_level log_write_level,
                                     const char* log_file_line,
                                     const char* log_tag,
                                     const char* log_message);