lib/bindings/trtc/ffi_bindings.dart


  late final _send_custom_audio_dataPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(trtc_cloud, trtc_audio_frame_t)>>(
      'trtc_cloud_send_custom_audio_data');
  late final _send_custom_audio_data = _send_custom_audio_dataPtr
      .asFunction<int Function(trtc_cloud, trtc_audio_frame_t)>();

  /// 10.5
  int enable_mix_external_audio_frame(
    trtc_cloud instance,
    bool enable_publish,
    bool enable_playout,
  ) {
    return _enable_mix_external_audio_frame(
      instance,
      enable_publish,
      enable_playout,
    );
  }

  late final _enable_mix_external_audio_framePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Bool, ffi.Bool)>>(
      'trtc_cloud_enable_mix_external_audio_frame');
  late final _enable_mix_external_audio_frame =
      _enable_mix_external_audio_framePtr
          .asFunction<int Function(trtc_cloud, bool, bool)>();

  /// 10.9.1
  int enable_local_video_custom_process(
    trtc_cloud instance,
    bool enable,
    int pixel_format,
    int buffer_type,
  ) {
    return _enable_local_video_custom_process(
      instance,
      enable,
      pixel_format,
      buffer_type,
    );
  }

  late final _enable_local_video_custom_processPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Bool, ffi.Int,
              ffi.Int)>>('trtc_cloud_enable_local_video_custom_process');
  late final _enable_local_video_custom_process =
      _enable_local_video_custom_processPtr
          .asFunction<int Function(trtc_cloud, bool, int, int)>();

  /// 10.9.2
  int set_local_video_custom_process_callback(
    trtc_cloud instance,
    trtc_video_frame_callback callback,
  ) {
    return _set_local_video_custom_process_callback(
      instance,
      callback,
    );
  }

  late final _set_local_video_custom_process_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(trtc_cloud, trtc_video_frame_callback)>>(
      'trtc_cloud_set_local_video_custom_process_callback');
  late final _set_local_video_custom_process_callback =
      _set_local_video_custom_process_callbackPtr
          .asFunction<int Function(trtc_cloud, trtc_video_frame_callback)>();

  /// 10.10
  int set_local_video_render_callback(
    trtc_cloud instance,
    int pixel_format,
    int buffer_type,
    trtc_video_frame_callback callback,
  ) {
    return _set_local_video_render_callback(
      instance,
      pixel_format,
      buffer_type,
      callback,
    );
  }

  late final _set_local_video_render_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  trtc_cloud, ffi.Int, ffi.Int, trtc_video_frame_callback)>>(
      'trtc_cloud_set_local_video_render_callback');
  late final _set_local_video_render_callback =
      _set_local_video_render_callbackPtr.asFunction<
          int Function(trtc_cloud, int, int, trtc_video_frame_callback)>();

  /// 10.11
  int set_remote_video_render_callback(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> user_id,
    int pixel_format,
    int buffer_type,
    trtc_video_render_callback callback,
  ) {
    return _set_remote_video_render_callback(
      instance,
      user_id,
      pixel_format,
      buffer_type,
      callback,
    );
  }

  late final _set_remote_video_render_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>, ffi.Int,
                  ffi.Int, trtc_video_render_callback)>>(
      'trtc_cloud_set_remote_video_render_callback');
  late final _set_remote_video_render_callback =
      _set_remote_video_render_callbackPtr.asFunction<
          int Function(trtc_cloud, ffi.Pointer<ffi.Char>, int, int,
              trtc_video_render_callback)>();

  /// 10.12
  int set_audio_frame_callback(
    trtc_cloud instance,
    trtc_audio_frame_callback callback,
  ) {
    return _set_audio_frame_callback(
      instance,
      callback,
    );
  }

  late final _set_audio_frame_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(trtc_cloud, trtc_audio_frame_callback)>>(
      'trtc_cloud_set_audio_frame_callback');
  late final _set_audio_frame_callback = _set_audio_frame_callbackPtr
      .asFunction<int Function(trtc_cloud, trtc_audio_frame_callback)>();

  /// 11.1
  int send_sustom_cmd_msg(
    trtc_cloud instance,
    int cmd_id,
    ffi.Pointer<ffi.Uint8> data,
    int data_size,
    bool reliable,
    bool ordered,
  ) {
    return _send_sustom_cmd_msg(
      instance,
      cmd_id,
      data,
      data_size,
      reliable,
      ordered,
    );
  }

  late final _send_sustom_cmd_msgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Int, ffi.Pointer<ffi.Uint8>, ffi.Int,
              ffi.Bool, ffi.Bool)>>('trtc_cloud_send_sustom_cmd_msg');
  late final _send_sustom_cmd_msg = _send_sustom_cmd_msgPtr.asFunction<
      int Function(trtc_cloud, int, ffi.Pointer<ffi.Uint8>, int, bool, bool)>();

  /// 11.2
  int send_sei_msg(
    trtc_cloud instance,
    ffi.Pointer<ffi.Uint8> data,
    int data_size,
    int repeat_count,
  ) {
    return _send_sei_msg(
      instance,
      data,
      data_size,
      repeat_count,
    );
  }

  late final _send_sei_msgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Uint8>, ffi.Int,
              ffi.Int)>>('trtc_cloud_send_sei_msg');
  late final _send_sei_msg = _send_sei_msgPtr
      .asFunction<int Function(trtc_cloud, ffi.Pointer<ffi.Uint8>, int, int)>();

  /// 12.1
  int start_speed_test(
    trtc_cloud instance,
    trtc_speed_test_params_t params,
  ) {
    return _start_speed_test(
      instance,
      params,
    );
  }

  late final _start_speed_testPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud,
              trtc_speed_test_params_t)>>('trtc_cloud_start_speed_test');
  late final _start_speed_test = _start_speed_testPtr
      .asFunction<int Function(trtc_cloud, trtc_speed_test_params_t)>();

  /// 12.2
  int stop_speed_test(
    trtc_cloud instance,
  ) {
    return _stop_speed_test(
      instance,
    );
  }

  late final _stop_speed_testPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_stop_speed_test');
  late final _stop_speed_test =
      _stop_speed_testPtr.asFunction<int Function(trtc_cloud)>();

  /// 13.1
  ffi.Pointer<ffi.Char> get_sdk_version(
    trtc_cloud instance,
  ) {
    return _get_sdk_version(
      instance,
    );
  }

  late final _get_sdk_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(trtc_cloud)>>(
          'trtc_cloud_get_sdk_version');
  late final _get_sdk_version = _get_sdk_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(trtc_cloud)>();

  /// 13.2 - 13.5
  int set_log_param(
    trtc_cloud instance,
    trtc_log_param_t param,
  ) {
    return _set_log_param(
      instance,
      param,
    );
  }

  late final _set_log_paramPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(trtc_cloud, trtc_log_param_t)>>(
      'trtc_cloud_set_log_param');
  late final _set_log_param = _set_log_paramPtr
      .asFunction<int Function(trtc_cloud, trtc_log_param_t)>();

  /// 13.6
  int set_log_callback(
    trtc_cloud instance,
    trtc_log_callback callback,
  ) {
    return _set_log_callback(
      instance,
      callback,
    );
  }

  late final _set_log_callbackPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(trtc_cloud, trtc_log_callback)>>(
      'trtc_cloud_set_log_callback');
  late final _set_log_callback = _set_log_callbackPtr
      .asFunction<int Function(trtc_cloud, trtc_log_callback)>();

  /// 13.7
  int show_debug_view(
    trtc_cloud instance,
    int show_type,
  ) {
    return _show_debug_view(
      instance,
      show_type,
    );
  }

  late final _show_debug_viewPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Int)>>(
          'trtc_cloud_show_debug_view');
  late final _show_debug_view =
      _show_debug_viewPtr.asFunction<int Function(trtc_cloud, int)>();

  /// 13.9
  ffi.Pointer<ffi.Char> call_experimental_api(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> json_str,
  ) {
    return _call_experimental_api(
      instance,
      json_str,
    );
  }

  late final _call_experimental_apiPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(trtc_cloud,
              ffi.Pointer<ffi.Char>)>>('trtc_cloud_call_experimental_api');
  late final _call_experimental_api = _call_experimental_apiPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(trtc_cloud, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Void> copy_native_memery(
    ffi.Pointer<ffi.Void> dst,
    ffi.Pointer<ffi.Void> src,
    int size,
  ) {
    return _copy_native_memery(
      dst,
      src,
      size,
    );
  }

  late final _copy_native_memeryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>,
              ffi.Int)>>('trtc_cloud_copy_native_memery');
  late final _copy_native_memery = _copy_native_memeryPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, int)>();

  void write_log(
    int log_write_level,
    ffi.Pointer<ffi.Char> log_file_line,
    ffi.Pointer<ffi.Char> log_tag,
    ffi.Pointer<ffi.Char> log_message,
  ) {
    _write_log(log_write_level, log_file_line, log_tag, log_message);
  }

  late final _write_logPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('trtc_cloud_write_log');
  late final _write_log = _write_logPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(int, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int tx_beauty_manager_set_beauty_style(
    tx_beauty_manager instance,
    int style,
  ) {
    return _tx_beauty_manager_set_beauty_style(
      instance,
      style,
    );
  }

  late final _tx_beauty_manager_set_beauty_stylePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(tx_beauty_manager, ffi.Int)>>(
          'tx_beauty_manager_set_beauty_style');
  late final _tx_beauty_manager_set_beauty_style =
      _tx_beauty_manager_set_beauty_stylePtr
          .asFunction<int Function(tx_beauty_manager, int)>();

  int tx_beauty_manager_set_beauty_level(
    tx_beauty_manager instance,
    int level,
  ) {
    return _tx_beauty_manager_set_beauty_level(
      instance,
      level,
    );
  }

  late final _tx_beauty_manager_set_beauty_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(tx_beauty_manager, ffi.Int)>>(
          'tx_beauty_manager_set_beauty_level');
  late final _tx_beauty_manager_set_beauty_level =
      _tx_beauty_manager_set_beauty_levelPtr
          .asFunction<int Function(tx_beauty_manager, int)>();

  int tx_beauty_manager_set_whiteness_level(
    tx_beauty_manager instance,
    int level,
  ) {
    return _tx_beauty_manager_set_whiteness_level(
      instance,
      level,
    );
  }

  late final _tx_beauty_manager_set_whiteness_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(tx_beauty_manager, ffi.Int)>>(
          'tx_beauty_manager_set_whiteness_level');
  late final _tx_beauty_manager_set_whiteness_level =
      _tx_beauty_manager_set_whiteness_levelPtr
          .asFunction<int Function(tx_beauty_manager, int)>();

  int tx_beauty_manager_enable_sharpness_enhancement(
    tx_beauty_manager instance,
    bool enable,
  ) {
    return _tx_beauty_manager_enable_sharpness_enhancement(
      instance,
      enable,
    );
  }
